# grpc_server

./: .gitignore
go/: go.mod
go/server/: main.go
go/userpb/: user.pb.go  user_grpc.pb.go
js/: index.js  package-lock.json  package.json
js/userpb/: user_grpc_pb.js  user_pb.js
proto/: user.proto
python/: main.py  pyproject.toml
python/userpb/: user_pb2.py  user_pb2_grpc.py
ts/: index.ts  package-lock.json  package.json
ts/userpb/: user.ts
